--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- https://images.unsplash.com/photo-1543287920-26349b5b1376?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80 -->
 <html>
 
 <head>
@@ -6,7 +7,7 @@
   <!-- meta tags and title -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TP6: Interactive Recipe</title>
+  <title>TP7</title>
 
   <!-- external and on-page CSS goes here -->
   <link rel="stylesheet" href="styles.css" media="all">
@@ -23,9 +24,17 @@
 </head>
 
 <body>
-<h1 id="heading">Red Velvet Cupcakes (~ 40 mins)</h1>
-<img id="cupcakes" src="https://images.unsplash.com/photo-1543287920-26349b5b1376?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80">
   
+  <div id="nav">
+    <a href="#">First Recipe</a>
+    <a href="#">Second Recipe</a>
+    <a href="#">Third Recipe</a>
+  </div>
+  
+  <h1 id="heading">Red Velvet Cupcakes (~ 40 mins)</h1>
+   <h3 id="contribute">Contributed by name</h3>
+  <img id="cupcakes" src=""> 
+
     <div id="cakeingredients">
       <h4> Cake Ingredients</h4>
       <ul>
