added new recipes and expanded JS

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
 <body>
   
   <div id="nav">
-    <a href="#">First Recipe</a>
-    <a href="#">Second Recipe</a>
-    <a href="#">Third Recipe</a>
+    <a href="#" id="firstRecipe">First Recipe</a>
+    <a href="#" id="secondRecipe">Second Recipe</a>
+    <a href="#" id="thirdRecipe">Third Recipe</a>
   </div>
   
-  <h1 id="heading">Red Velvet Cupcakes (~ 40 mins)</h1>
-   <h3 id="contribute">Contributed by name</h3>
+  <h1 id="heading"></h1>
+  <h3 id="contribute">Contributed by <span id="name">name</span></h3>
   <img id="cupcakes" src=""> 
 
     <div id="cakeingredients">
-      <h4> Cake Ingredients</h4>
+      <h4>Ingredients</h4>
       <ul>
       </ul>
     </div>
 
     <div id="frostingingredients">
-      <h4>Frosting Ingredients</h4>
+      <h4>Equipment/Ingredients</h4>
       <ul>
       </ul>
     </div>
